# Native Safetensor Support Integration
## Summary

Integrated direct Safetensor format support into `NativeLLMProvider` (`native` provider) so that the Gollek native engine can handle both `.gguf` and `.safetensors` models transparently. LibTorch is wired as an optional runtime fallback.

## Changes Made

### 1. Native Inference Module Dependencies
**[pom.xml](file:///Users/bhangun/Workspace/workkayys/Products/Wayang/wayang-platform/gollek/runner/native/gollek-inference/pom.xml)**
- Added `gollek-safetensor-engine` dependency to access `DirectSafetensorBackend`

---

### 2. NativeLLMProvider — Multi-format Support
**[NativeLLMProvider.java](file:///Users/bhangun/Workspace/workkayys/Products/Wayang/wayang-platform/gollek/runner/native/gollek-inference/src/main/java/tech/kayys/gollek/inference/nativeimpl/NativeLLMProvider.java)**

Key changes:
- **Injected** `DirectSafetensorBackend` for zero-copy safetensor evaluation
- **Optional LibTorch fallback** via CDI `Instance<StreamingProvider>` — no hard dependency on `gollek-runner-libtorch` (avoids its pre-existing `ContinuousBatchScheduler` compilation issue)
- **`capabilities()`** now advertises both `ModelFormat.GGUF` and `ModelFormat.SAFETENSORS`
- **`supports()`** detects safetensor models by:
  - File extension (`.safetensors`, `.safetensor`)
  - **Directory probing** — checks if a path is a directory containing `.safetensors` files (critical for CLI blob resolution like `~/.gollek/models/blobs/UUID/`)
  - Metadata format fields
- **`isSafetensorModel()`** private helper with the same detection logic for routing
- **`requestWithResolvedModelPath()`** rewrites the abstract model ID to the physical blob path before delegating to `DirectSafetensorBackend`
- **`infer()` / `inferStream()`** routing:
  - Safetensor → `DirectSafetensorBackend` (primary) → LibTorch (fallback on failure)
  - GGUF → existing `GGUFLoader` + `NativeInferenceEngine` pipeline

---

### 3. CLI Format-to-Provider Routing
**[RunCommand.java](file:/